# cachalot

./: Cargo.toml  README.md
cachalot_proc_macro/: Cargo.toml
cachalot_proc_macro/src/: lib.rs
src/: config.rs  idx_range.rs  lib.rs  pages.rs  source.rs
src/store/: mod.rs  store.rs  store_pages.rs  try_store.rs
tests/: intergation_test.rs
tests/ui/: constness.rs  constness.stderr
